fixed issue with gap attribute not applying correctly to the cover-text class.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,7 +280,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    column-gap: 20px;
+    gap: 20px;
     position: relative;
     min-width: 216.28px;
     min-height: 268px;
